# wro2019-arc-randomizer-Draft

./: .gitignore  Dockerfile  README.md  WRO_container.sh  package-lock.json  package.json  webpack.config.js
generator/: CMakeLists.txt  ColorGenerator.cpp  ColorGenerator.hpp  Field.hpp  FieldGenerator.cpp  FieldGenerator.hpp  FieldJsonSerializer.cpp  FieldJsonSerializer.hpp  FieldPrinter.cpp  FieldPrinter.hpp  fundamental_types.hpp  main.cpp  metaprogramming_stuff.hpp  util.hpp  vector.hpp
generator/test/: CMakeLists.txt  test_util.cpp
public/: index.html  style.css
scripts/: WRO_container.sh  analyze_logs.py  build-generator.sh  clean.sh  run-server.sh
src/frontend/: debug_renderer.js  get_field.js  main.js  pdf_generator.js  qr_code_renderer.js  renderer.js
src/server/: app.js  generate_field.js
src/server/test/: generate_field.test.js
src/util/: color.js  encode_field.js  field.js  random.js
src/util/test/: color.test.js  encode_field.test.js  field.test.js  mock_field.js
